@@ -23,36 +23,8 @@
 ;; CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 ;; SOFTWARE.
 
-(scheme base)
-(scheme case-lambda)
-(scheme char)
-(scheme complex)
-(scheme cxr)
-(scheme eval)
-(scheme file)
-(scheme inexact)
-(scheme lazy)
-(scheme load)
-(scheme process-context)
-(scheme read)
-(scheme repl)
-(scheme r5rs)
-(scheme write)
-(srfi 1)
-(srfi 2)
-(srfi 8)
-(srfi 28)
-(srfi 37)
-(srfi 59)
-(srfi 64)
-(srfi 125)
-(srfi 128)
-(srfi 139)
-(srfi 158)
-(srfi 188)
-(srfi 190)
-(srfi 211 identifier-syntax)
-(srfi 211 syntax-case)
-(srfi 211 syntax-parameter)
-(srfi 211 variable-transformer)
-(srfi 211 with-ellipsis)
+(define-library (srfi 188)
+  (export splicing-let-syntax splicing-letrec-syntax)
+  (import (only (unsyntax $bootstrap)
+                splicing-let-syntax
+                splicing-letrec-syntax)))
